fix scrolling on mobile

--- a/public/stylesheets/liarliar.css
+++ b/public/stylesheets/liarliar.css
@@ -3,7 +3,6 @@ body,html {
     height: 100%;
     margin: 0 auto;
     font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-    overflow: hidden;
 }
 
 h1,h2,h3,h4,h5,h6 {
